<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list_subscriptions"
        android:orderInCategory="100"
        android:title="@string/action_display_vapid_key"
        android:icon="@android:drawable/ic_menu_manage"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_display_vapid_key"
        android:orderInCategory="100"
        android:title="@string/action_display_vapid_key"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_scan_vapid_key"
        android:orderInCategory="100"
        android:title="@string/action_scan_vapid_key"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_display_subscription"
        android:orderInCategory="100"
        android:title="@string/action_display_subscription"
        android:icon="@android:drawable/ic_menu_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_enter_vapid_key"
        android:orderInCategory="100"
        android:title="@string/action_enter_vapid_key"
        android:icon="@android:drawable/ic_lock_idle_lock"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:icon="@android:drawable/ic_menu_help"
        app:showAsAction="never" />

</menu>
