<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EnterVapidKeyActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/textViewLabelVapidKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_vapid_key"
        app:layout_constraintBottom_toTopOf="@+id/editTextVapidKey"
        app:layout_constraintLeft_toLeftOf="@+id/editTextVapidKey"
        />

    <EditText
        android:id="@+id/editTextVapidKey"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/hint_vapid_key"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textViewLabelAuthSecret"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_width="fill_parent"
        android:autofillHints="base64" />

    <TextView
        android:id="@+id/textViewLabelAuthSecret"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/label_auth_secret"
        app:layout_constraintBottom_toTopOf="@+id/editTextAuthSecret"
        app:layout_constraintLeft_toLeftOf="@+id/editTextAuthSecret"
        />

    <EditText
        android:id="@+id/editTextAuthSecret"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/hint_auth_secret"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        android:layout_width="fill_parent"
        android:autofillHints="base64" />

    <ImageButton
        android:id="@+id/imageButtonEnterVapidKey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@+id/editTextVapidKey"
        app:srcCompat="?android:attr/textCheckMark"
        android:contentDescription="@string/description_enter_vapid_key" />

</androidx.constraintlayout.widget.ConstraintLayout>