<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EnterVapidKeyActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        />

    <TextView
        android:id="@+id/textViewLabelAccept1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accept_shared_code_1"
        app:layout_constraintBottom_toTopOf="@+id/textViewLabelAccept2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLabelAccept2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accept_shared_code_vapid_key"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_accept"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:srcCompat="?android:attr/textCheckMark"
        tools:layout_editor_absoluteX="344dp" />

</androidx.constraintlayout.widget.ConstraintLayout>